# PDevFrame

./: build.gradle  config.gradle  gradle.properties  import-summary.txt  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/res/layout/: capture.xml
android33/: build.gradle
android33/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/androidTest/java/hbb/example/test/: ExampleInstrumentedTest.kt  zhenti.kt
app/src/androidTest/java/hbb/example/test/util/: BitmapUtilTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/hbb/example/test/aidl/: IMyAidlInterface.aidl
app/src/main/cpp/: CMakeLists.txt  main.cpp  test.cpp
app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/include/libavutil/: crc.h
app/src/main/cpp/ffmpeg/include/libswresample/: swresample.h  version.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decoder.h
app/src/main/java/hbb/example/test/: App.kt  Eyes.java  EyesKitKat.java  EyesLollipop.java  ImageSwitchView.kt
app/src/main/java/hbb/example/test/Image/: CustomDrawableView.kt  MyDrawable.kt  (+1 more)
app/src/main/res/anim/: anim.xml  layout_anim.xml
app/src/main/res/drawable/: blue_circle.xml  clip.xml  dialog_bg.xml  green_circle.xml  red_circle.xml  test1.xml  yellow_circle.xml
app/src/main/res/layout/: act_eventbus.xml  act_gift_stkl.xml  act_glider_main.xml  act_motionlayou.xml  activity_animations_scene1.xml  activity_arcode.xml  activity_jni.xml  activity_main.xml  activity_main2.xml  activity_main_recyclerview.xml  activity_saf_main.xml  dialog_home_certification.xml  item_content.xml  item_header.xml  layout_loading_view.xml  mediacoder_activity.xml  one_activity.xml  one_fragment.xml  transaction_main.xml  transaction_red.xml  two_activity.xml
app/src/main/res/transition/: changebounds_with_arcmotion.xml  slide_and_changebounds.xml  slide_and_changebounds_sequential.xml  slide_and_changebounds_sequential_with_interpolators.xml  slide_from_bottom.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: accessibilityxml.xml  motion_image.xml  motion_scene.xml
app/src/test/java/hbb/example/test/: ExampleUnitTest.kt
chat/: build.gradle
chat/src/androidTest/java/primary/student/chat/: ExampleInstrumentedTest.kt
chat/src/main/: AndroidManifest.xml
chat/src/main/java/primary/student/chat/: MainActivity.kt
chat/src/main/res/layout/: activity_main.xml  fragment_dashboard.xml  fragment_home.xml  fragment_notifications.xml
chat/src/main/res/navigation/: mobile_navigation.xml
chat/src/test/java/primary/student/chat/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
home/: build.gradle
home/src/androidTest/java/primary/student/home/: ExampleInstrumentedTest.kt
home/src/main/: AndroidManifest.xml
home/src/main/java/primary/student/home/: MainActivity.kt  MainActivityJ.java
home/src/main/res/layout/: activity_main_home.xml
home/src/test/java/primary/student/home/: ExampleUnitTest.kt
lib/src/main/java/hbb/best/lib/: MyClass.java  TEST.java
rebound/: build.gradle
rebound/src/androidTest/java/hbb/util/rebound/: ExampleInstrumentedTest.kt
rebound/src/main/: AndroidManifest.xml
rebound/src/main/res/values/: strings.xml
rebound/src/test/java/hbb/util/rebound/: ExampleUnitTest.kt
wraplayout/: build.gradle
wraplayout/src/androidTest/java/primaryschoolstudent/wraplayout/: ExampleInstrumentedTest.kt
wraplayout/src/main/: AndroidManifest.xml
wraplayout/src/main/java/primaryschoolstudent/wraplayout/: WrapLayout.kt
wraplayout/src/test/java/primaryschoolstudent/wraplayout/: ExampleUnitTest.kt
(+154 files in other folders)
